# programmingtips1

./: CMakeLists.txt  RunLinkedListApp.bat  RunLinkedListApp.sh  cleanBuildDir.sh  makefile
src/: CMakeLists.txt  linkedlist.c  linkedlist.h  logging.c  logging.h  main.c  makefile
